--- a/css/vegan.css
+++ b/css/vegan.css
@@ -199,8 +199,46 @@ header.masthead {
       line-height: 75px;
       margin-bottom: 50px;
       font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif; } }
+
 container.team-pict{
-    padding-top:150px;
-    padding-bottom: 100px;
-    background-size: contain;
+    padding-top: 20px;
+    padding-bottom: 20px; 
 }
+
+section#Contact {
+  background-size: cover;
+  background-image: url("../images/image2.jpg");
+  background-repeat: no-repeat;
+  background-position: center; }
+  section#Contact .section-heading {
+    color: #fff; }
+  section#Contact .form-group {
+    margin-bottom: 25px; }
+    section#Contact .form-group input,
+    section#Contact .form-group textarea {
+      padding: 20px; }
+    section#Contact .form-group input.form-control {
+      height: auto; }
+    section#Contact .form-group textarea.form-control {
+      height: 248px; }
+  section#Contact .form-control:focus {
+    border-color: #fed136;
+    box-shadow: none; }
+  section#Contact ::-webkit-input-placeholder {
+    font-weight: 700;
+    color: #ced4da;
+    font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif; }
+  section#Contact :-moz-placeholder {
+    font-weight: 700;
+    color: #ced4da;
+    /* Firefox 18- */
+    font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif; }
+  section#Contact ::-moz-placeholder {
+    font-weight: 700;
+    color: #ced4da;
+    /* Firefox 19+ */
+    font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif; }
+  section#Contact :-ms-input-placeholder {
+    font-weight: 700;
+    color: #ced4da;
+    font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif; }
