add kitchen section

--- a/css/vegan.css
+++ b/css/vegan.css
@@ -326,6 +326,9 @@ header.masthead {
   display: none;
   opacity: 0; }
 
+.Kitchen-heading {
+  margin: 15px 0;
+  text-transform: none; }
 
 container.team-pict{
     background-image:url("../images/team3.jpg");
@@ -373,3 +376,16 @@ section#Contact {
     font-weight: 700;
     color: #ced4da;
     font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif; }
+
+/* footer */
+ .btn-twitter {
+     background-color: #00aced;
+     border-color: #00aced; 
+ }
+ .btn-facebook { 
+     background-color: #4868ac; 
+     border-color: #4868ac;
+ }
+ .btn-instagram {
+     background-color: #fb3958;
+     border-color: #fb3958;
