adds padding to footer

--- a/css/vegan.css
+++ b/css/vegan.css
@@ -396,6 +396,7 @@ section#Contact {
     background-color: #212529;
     color: #ffffff;
     text-align: center; 
+    padding-top: 20px;
   }
 
   .form-inline {
