--- a/css/vegan.css
+++ b/css/vegan.css
@@ -165,22 +165,22 @@ header.masthead {
     -moz-background-size: cover;
     -o-background-size: cover;
     text-align: center;
-    color: white;}
+    color: #dcab01;}
 
   header.masthead .intro-text {
     padding-top: 250px;
     padding-bottom: 100px; }
     header.masthead .intro-text .intro-lead-in {
-      font-size: 22px;
+      font-size: 50px;
       font-style: italic;
       line-height: 22px;
-      margin-bottom: 25px;
+      margin-bottom: 15px;
       font-family: 'Droid Serif', 'Helvetica Neue', Helvetica, Arial, sans-serif; }
     header.masthead .intro-text .intro-heading {
-      font-size: 50px;
+      font-size: 40px;
       font-weight: 700;
       line-height: 50px;
-      margin-bottom: 25px;
+      margin-bottom: 15px;
       font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif; }
 
 @media (min-width: 768px) {
@@ -188,16 +188,16 @@ header.masthead {
     padding-top: 300px;
     padding-bottom: 200px; }
     header.masthead .intro-text .intro-lead-in {
-      font-size: 40px;
+      font-size: 50px;
       font-style: italic;
       line-height: 40px;
-      margin-bottom: 25px;
+      margin-bottom: 15px;
       font-family: 'Droid Serif', 'Helvetica Neue', Helvetica, Arial, sans-serif; }
     header.masthead .intro-text .intro-heading {
-      font-size: 75px;
+      font-size: 40px;
       font-weight: 700;
       line-height: 75px;
-      margin-bottom: 50px;
+      margin-bottom: 15px;
       font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif; } }
 
 
@@ -334,6 +334,7 @@ header.masthead {
   margin: 15px 0;
   text-transform: none; }
 
+
 container.team-pict{
     background-image:url("../images/team3.jpg");
     background-position : absolute;
@@ -359,7 +360,7 @@ section#Contact {
   background-repeat: no-repeat;
   background-position: center; }
   section#Contact .section-heading {
-    color: #fff; }
+    color: white; }
   section#Contact .form-group {
     margin-bottom: 25px; }
     section#Contact .form-group input,
